# Prisma-backend

./: .env.example  .gitignore  AGENTS.md  CONFIGURACAO_OBSERVERS_SCHEDULER.md  CONFIGURATION_OBSERVERS_SCHEDULER.md  LICENSE  MUDANCAS_LOG.md  README.md  README.pt-BR.md  app.py  database.py  docker-compose.yml  pyproject.toml  routes_example.txt  run.sh
API/: app.py  database.py  pyproject.toml
API/pages/: analysis.html
api/: app.py  database.py  pyproject.toml
api/src/analysis/: analysis.py
api/src/analysis/Pedagogico/: pedagogic.py
pre_api/: MUDANCAS_LOG.md  README.md  app.py  auth.py  database.py  install_auth.py  kkkkk.json  models.py  processor.py  pyproject.toml  scheduler.py  scheduler_jobs.yml
pre_api/.guardrails/: hub_registry.json  teste_guardrails.py
pre_api/mock_json/: general_data.json  general_info.json  graphs.json  percentual.json  rankings_students.json
pre_api/routes/: __init__.py  admin_routes.py  auth_routes.py  chatbot.py  helpers.py  student_routes.py  tutors_routes.py
pre_api/services/: __init__.py  build_all_subjects.py  build_class_summary.py  build_course_summary.py  build_general_indicators.py  build_general_rankings.py  build_general_subjects_indicators.py  build_general_summary.py  build_subject_indicators.py  build_subject_info_graphs.py  build_subject_rankings.py  build_subject_students_cognitive.py  build_subject_students_engagement.py  build_subject_students_give_up.py  build_subject_students_motivation.py  build_subject_students_pedagogic.py  build_subject_students_performance.py  build_subject_summary.py  moodle_config_service.py  nl2sql_pipeline.py
pre_api/services/chatbot/: build_chatbot_response.py  memory.py  rewrite.py  safety.py
pre_api/services/nl2sql/: __init__.py  answer.py  candidates.py  config.py  db.py  execution.py  graph.py  judge.py  prompts.py  sql_processing.py  tool.py  visualization.py
pre_api/services/student/: build_subject_student_cognitive.py  build_subject_student_engagement.py  build_subject_student_give_up.py  build_subject_student_grades.py  build_subject_student_indicators.py  build_subject_student_motivation.py  build_subject_student_pedagogic.py  build_subject_student_performance.py  build_subject_student_summary.py
pre_api/services/student/general/: build_general_indicators.py  build_general_subjects_indicators.py
pre_api/services/student/student/: build_subject_student_cognitive.py  build_subject_student_engagement.py  build_subject_student_give_up.py  build_subject_student_grades.py  build_subject_student_indicators.py  build_subject_student_motivation.py  build_subject_student_performance.py  build_subject_student_summary.py
pre_api/services/student/subject/: build_subject_indicators.py  build_subject_rankings.py  build_subject_students_cognitive.py  build_subject_summary.py
pre_api/services/student/subject/indicators/: build_subject_students_cognitive.py  build_subject_students_engagement.py  build_subject_students_motivation.py
pre_api/services/tutors/general/: build_all_subjects_tutors.py  build_general_tutors_subjects_indicators.py  build_tutors_general_indicators.py  build_tutors_general_rankings.py  build_tutors_general_summary.py
pre_api/services/tutors/subject/: build_tutors_subject_indicators.py  build_tutors_subject_interaction_channels.py  build_tutors_subject_rankings.py  build_tutors_subject_summary.py
pre_api/services/tutors/subject/indicators/: build_tutors_subject_access.py  build_tutors_subject_feedback.py  build_tutors_subject_response_forums.py
pre_api/services/tutors/tutor/: build_subject_tutors_tutor_indicators.py  build_subject_tutors_tutor_summary.py  build_tutors_subject_tutor_access.py  build_tutors_subject_tutor_feedback.py  build_tutors_subject_tutor_graphs.py  build_tutors_subject_tutor_indicators.py  build_tutors_subject_tutor_response_forums.py  build_tutors_subject_tutor_summary.py
pre_api/src/tarrafa/: processor.py
pre_api/tests/: test_auth.py  test_moodle_config.py  test_nl2sql_indicators.py
src/: pyproject.toml
src/analysis/: analysis.py  indicator.py
src/analysis/Engajamento/: engagement.py
src/analysis_lib/: config_crypto.py
src/analysis_lib/analysis/: analysis.py  analyzer.py  indicator.py
src/analysis_lib/analysis/Actors/Student/: student_analyzer.py
src/analysis_lib/analysis/Actors/Tutor/: tutor_analyzer.py
src/analysis_lib/analysis/Cognitivo/: cognitive.py
src/analysis_lib/analysis/Desempenho/: performance.py
src/analysis_lib/analysis/Engajamento/: engagement.py
src/analysis_lib/analysis/General/: general_indicators.py  general_subjects_indicators.py  subjects.py
src/analysis_lib/analysis/Give_Up/: give_up.py
src/analysis_lib/analysis/Indicators_Percentual/: indicators_percentual.py
src/analysis_lib/analysis/Info_Graphs/: info_graphs.py
src/analysis_lib/analysis/Motivacao/: motivation.py
src/analysis_lib/analysis/Pedagogico/: pedagogic.py
src/analysis_lib/analysis/Rankings/: rankings.py
src/analysis_lib/analysis/Student/Student_Grades/: grades.py
src/analysis_lib/analysis/Summary/: summary.py
src/analysis_lib/mapper/: map.py  moodle.py
src/analysis_lib/mapper/connectors/: moodle3_1.py
src/mapper/: map.py  moodle.py
src/mapper/connectors/: moodle3_1.py
src/pages/: analysis.html  app.html
worker/: app.py  clear.py  database.py  indicator_channels.yml  indicator_publisher.py  install.py  pyproject.toml  rabbit.py
worker/src/analysis/: analysis.py  indicator.py
worker/src/analysis/Desempenho/: performance.py
worker/src/analysis/Engajamento/: engagement.py
worker/src/analysis/Motivacao/: motivation.py
worker/src/mapper/: map.py
worker/src/mapper/connectors/: moodle3_1.py
(+42 files in other folders)
