[project]
name = "tarrafa"
version = "0.1.0"
description = ""
authors = [
    {name = "Yan-Fonseca",email = "yanfonseca2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "tarrafa", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
