[project]
name = "prisma-backend-shared"
version = "0.1.0"
description = "Shared analysis package for Prisma backend services"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
