[project]
name = "tarrafa"
version = "0.1.0"
description = ""
authors = [
    {name = "Yan-Fonseca",email = "yanfonseca2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymysql (>=1.1.1,<2.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-script (>=2.0.6,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
]

[tool.poetry]
packages = [{include = "tarrafa", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
