[project]
name = "tarrafa"
version = "0.1.0"
description = ""
authors = [{ name = "Yan-Fonseca", email = "yanfonseca2002@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "prisma-backend-shared",
    "pymysql>=1.1.1,<2.0.0",
    "flask-sqlalchemy>=3.1.1,<4.0.0",
    "flask-script>=2.0.6,<3.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "pika>=1.3.2,<2.0.0",
    "flask>=3.1.2,<4.0.0",
    "psycopg[binary]>=3.2.9,<4.0.0",
    "requests>=2.32.5,<3.0.0",
    "pandas>=2.3.3,<3.0.0",
    "flasgger>=0.9.7.1,<0.10.0.0",
    "flask-cors>=6.0.1,<7.0.0",
    "cryptography>=46.0.3,<47.0.0",
    "apscheduler>=3.11.2,<4.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "flask-security-too[common,fsqla]>=5.8.0,<6.0.0",
    "sqlglot>=30.8.0,<31.0.0",
    "langgraph>=1.2.2,<2.0.0",
    "crewai>=1.14.6,<2.0.0",
    "crewai-tools>=1.14.6,<2.0.0",
    "guardrails-ai>=0.10.2,<0.11.0",
    "numpy<2.4",
]

[tool.uv]
package = false

[tool.uv.sources]
prisma-backend-shared = { path = "..", editable = true }
