[project]
name = "tarrafa"
version = "0.1.0"
description = ""
authors = [{ name = "Yan-Fonseca", email = "yanfonseca2002@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "flask[async] (>=3.1.1,<4.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-script (>=2.0.6,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "redis (>=6.4.0,<7.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
]

[tool.poetry]
packages = [
    { include = "tarrafa", from = "." },
    { include = "src", from = ".." },    # Isso adiciona o diretório 'raiz/src'
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
